fix overflow-2

--- a/styles.css
+++ b/styles.css
@@ -944,7 +944,7 @@ footer {
     }
 
     .logo-button img {
-        width: 80% !important;
+        width: 50% !important;
     }
 }
 
